--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,8 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: attendance-assistant
-  labels:
-    app: attendance-assistant
 spec:
   replicas: 1
   selector:
@@ -17,21 +15,25 @@ spec:
       containers:
         - name: attendance-assistant
           image: attendance-assistant:latest
+          imagePullPolicy: Never  # ⚠️ Important for local image use
           ports:
             - containerPort: 7860
           envFrom:
             - configMapRef:
                 name: attendance-env
+
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
   name: attendance-service
 spec:
-  type: NodePort
   selector:
     app: attendance-assistant
+  type: NodePort
   ports:
-    - port: 7860
+    - protocol: TCP
+      port: 7860
       targetPort: 7860
-      nodePort: 30086  # You can access this from the browser via Minikube
+      nodePort: 30086  # optional: fixed NodePort
