--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,24 +13,10 @@ spec:
         app: attendance-assistant
     spec:
       containers:
-        - name: attendance-assistant
-          image: attendance-assistant:latest
-          imagePullPolicy: Never  # ✅ Force Kubernetes to use local image
-          ports:
-            - containerPort: 7860
-          envFrom:
-            - configMapRef:
-                name: attendance-env  # 🔁 Your ConfigMap must exist
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: attendance-service
-spec:
-  type: NodePort
-  selector:
-    app: attendance-assistant
-  ports:
-    - port: 7860
-      targetPort: 7860
-      nodePort: 30086  # Optional, or let Kubernetes assign one
+      - name: attendance-assistant
+        image: praven4754/attendance-assistant:latest  # Replace with your Docker Hub username/image
+        ports:
+        - containerPort: 7860
+        envFrom:
+        - configMapRef:
+            name: attendance-assistant-config
