--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ openpyxl>=3.1.2
 fpdf>=1.7.2
 python-dotenv>=1.0.1
 sendgrid>=6.10.0
-tabulate
+tabulate>=0.9.0
+google-generativeai>=0.3.2   # ✅ Add this line
