--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -51,4 +51,7 @@ jobs:
       # 🧪 Step 7: Run the Docker container and mount the .env file inside it
       - name: Run Docker Container
         run: |
-          docker run --rm -d -p 7860:7860 -v ${{ github.workspace }}/.env:/app/.env $IMAGE_NAME:${{ github.run_number }}
+          mkdir -p /home/vagrant/output  # just in case it doesn't exist
+          docker run --rm -d -p 7860:7860 \
+          -v /home/vagrant/output:/app/output \
+          -v ${{ github.workspace }}/.env:/app/.env \ $IMAGE_NAME:${{ github.run_number }}
