--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST << 'EOF'
             set -eux
+
             # Install Docker if missing
             if ! command -v docker >/dev/null 2>&1; then
               sudo apt-get update -y
@@ -33,31 +34,33 @@ jobs:
               sudo systemctl start docker
             fi
 
+            # Set app directory in ubuntu home
+            APP_DIR="/home/ubuntu/app"
+
             # Get latest code
-            if [ -d /opt/app ]; then
-              cd /opt/app
+            if [ -d "$APP_DIR" ]; then
+              cd "$APP_DIR"
               git fetch --all
               git reset --hard origin/main
             else
-              sudo rm -rf /opt/app || true
-              git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git /opt/app
-              cd /opt/app
+              rm -rf "$APP_DIR" || true
+              git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
+              cd "$APP_DIR"
             fi
 
             # Write .env from GitHub Secrets
-            cat <<EOT > /opt/app/.env
+            cat <<EOF > "$APP_DIR/.env"
             API_KEY=${API_KEY}
             OTHER_KEY=${OTHER_KEY}
-            EOT
-
+            EOF
             # Build Docker image
             IMAGE_TAG="deploy-$(date +%Y%m%d%H%M%S)"
-            sudo docker build -t attendance-app:$IMAGE_TAG /opt/app
+            sudo docker build -t attendance-app:$IMAGE_TAG "$APP_DIR"
 
             # Restart container
             sudo docker rm -f attendance-app || true
             sudo docker run -d --name attendance-app \
-              --env-file /opt/app/.env \
+              --env-file "$APP_DIR/.env" \
               -p 7860:7860 attendance-app:$IMAGE_TAG
 
             sudo docker image prune -f || true
