--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -23,44 +23,47 @@ jobs:
           API_KEY: ${{ secrets.API_KEY }}
           OTHER_KEY: ${{ secrets.OTHER_KEY }}
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST << 'EOF'
-set -eux
+          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST <<'EOF'
+          set -eux
 
-APP_DIR=/home/ubuntu/app
+          APP_DIR=/home/ubuntu/app
 
-# Install Docker if missing
-if ! command -v docker >/dev/null 2>&1; then
-  sudo apt-get update -y
-  sudo apt-get install -y docker.io git
-  sudo systemctl enable docker
-  sudo systemctl start docker
-fi
+          # Install Docker if missing
+          if ! command -v docker >/dev/null 2>&1; then
+            sudo apt-get update -y
+            sudo apt-get install -y docker.io git
+            sudo systemctl enable docker
+            sudo systemctl start docker
+          fi
 
-# Remove old app directory
-rm -rf $APP_DIR
+          # Remove old app directory
+          rm -rf "$APP_DIR"
 
-# Clone latest code
-git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git $APP_DIR
-cd $APP_DIR
+          # Clone latest code
+          git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
+          cd "$APP_DIR"
 
-# Write .env file from GitHub Secrets
-cat > "$APP_DIR/.env" <<EOF
-API_KEY=${API_KEY}
-OTHER_KEY=${OTHER_KEY}
-EOF
+          # Write .env file from GitHub Secrets
+          cat > "$APP_DIR/.env" <<ENV_EOF
+          API_KEY=${API_KEY}
+          OTHER_KEY=${OTHER_KEY}
+          ENV_EOF
 
-# Build Docker image
-IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
-sudo docker build -t attendance-app:$IMAGE_TAG $APP_DIR
 
-# Stop and remove previous container if exists
-sudo docker rm -f attendance-app || true
+          # Build Docker image with timestamp tag
+          IMAGE_TAG="attendance-app-\$(date +%Y%m%d%H%M%S)"
+          sudo docker build -t attendance-app:\$IMAGE_TAG "$APP_DIR"
 
-# Run new container
-sudo docker run -d --name attendance-app \
-  --env-file $APP_DIR/.env \
-  -p 7860:7860 attendance-app:$IMAGE_TAG
+          # Stop and remove previous container if exists
+          if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app\$"; then
+            sudo docker rm -f attendance-app
+          fi
 
-# Cleanup old images
-sudo docker image prune -f || true
-EOF
+          # Run new container
+          sudo docker run -d --name attendance-app \
+            --env-file "$APP_DIR/.env" \
+            -p 7860:7860 attendance-app:\$IMAGE_TAG
+
+          # Cleanup old unused images
+          sudo docker image prune -f
+          EOF
