--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -20,10 +20,9 @@ jobs:
       - name: Deploy on EC2
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
-          API_KEY: ${{ secrets.API_KEY }}
-          OTHER_KEY: ${{ secrets.OTHER_KEY }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST <<'EOF'
+          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST 'bash -s' <<'EOF'
           set -eux
 
           APP_DIR=/home/ubuntu/app
@@ -43,27 +42,25 @@ jobs:
           git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
           cd "$APP_DIR"
 
-          # Write .env file from GitHub Secrets
+          # Write .env file with available secrets
           cat > "$APP_DIR/.env" <<ENV_EOF
-          API_KEY=${API_KEY}
-          OTHER_KEY=${OTHER_KEY}
+          GOOGLE_API_KEY='${GOOGLE_API_KEY:-not_set}'
           ENV_EOF
 
-
           # Build Docker image with timestamp tag
-          IMAGE_TAG="attendance-app-\$(date +%Y%m%d%H%M%S)"
-          sudo docker build -t attendance-app:\$IMAGE_TAG "$APP_DIR"
+          IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
+          sudo docker build -t attendance-app:$IMAGE_TAG "$APP_DIR"
 
           # Stop and remove previous container if exists
-          if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app\$"; then
+          if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app$"; then
             sudo docker rm -f attendance-app
           fi
 
           # Run new container
           sudo docker run -d --name attendance-app \
             --env-file "$APP_DIR/.env" \
-            -p 7860:7860 attendance-app:\$IMAGE_TAG
+            -p 7860:7860 attendance-app:$IMAGE_TAG
 
-          # Cleanup old unused images
+          # Cleanup old images
           sudo docker image prune -f
           EOF
