--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -26,7 +26,8 @@ jobs:
           set -eux
 
           APP_DIR=/home/ubuntu/app
-          PORT=7860
+          INTERNAL_PORT=7860
+          EXTERNAL_PORT=80
 
           # Install Docker if missing
           if ! command -v docker >/dev/null 2>&1; then
@@ -48,10 +49,10 @@ jobs:
           GOOGLE_API_KEY='${GOOGLE_API_KEY:-not_set}'
           ENV_EOF
 
-          # Find and stop any container using port 7860
-          OCCUPYING_CONTAINER=$(sudo docker ps --filter "publish=$PORT" -q | head -n1 || true)
+          # Find and stop any container using external port
+          OCCUPYING_CONTAINER=$(sudo docker ps --filter "publish=$EXTERNAL_PORT" -q | head -n1 || true)
           if [ -n "$OCCUPYING_CONTAINER" ]; then
-            echo "Stopping container $OCCUPYING_CONTAINER occupying port $PORT"
+            echo "Stopping container $OCCUPYING_CONTAINER occupying port $EXTERNAL_PORT"
             sudo docker stop "$OCCUPYING_CONTAINER" || true
             sudo docker rm "$OCCUPYING_CONTAINER" || true
           fi
@@ -65,10 +66,10 @@ jobs:
           IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
           sudo docker build -t attendance-app:$IMAGE_TAG "$APP_DIR"
 
-          # Run new container
+          # Run new container (map external port 80 -> internal port 7860)
           sudo docker run -d --name attendance-app \
             --env-file "$APP_DIR/.env" \
-            -p $PORT:$PORT attendance-app:$IMAGE_TAG
+            -p $EXTERNAL_PORT:$INTERNAL_PORT attendance-app:$IMAGE_TAG
 
           # Cleanup old images
           sudo docker image prune -f
