--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -30,70 +30,47 @@ jobs:
           INTERNAL_PORT=7860
           EXTERNAL_PORT=80
 
-          # Install Docker if missing
-          if ! command -v docker >/dev/null 2>&1; then
-            sudo apt-get update -y
-            sudo apt-get install -y docker.io git
-            sudo systemctl enable docker
-            sudo systemctl start docker
-          fi
+          # Install dependencies
+          sudo apt-get update -y
+          sudo apt-get install -y docker.io git unzip curl
+          sudo systemctl enable docker
+          sudo systemctl start docker
 
-          # Install ngrok if missing
+          # Install ngrok if not installed
           if ! command -v ngrok >/dev/null 2>&1; then
-            curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-            echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-            sudo apt-get update -y
-            sudo apt-get install -y ngrok
+            curl -s https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.zip -o ngrok.zip
+            unzip ngrok.zip
+            sudo mv ngrok /usr/local/bin/
+            rm ngrok.zip
           fi
 
-          # Authenticate ngrok
+          # Auth ngrok
           ngrok config add-authtoken "$NGROK_AUTHTOKEN"
 
-          # Remove old app directory
+          # Remove old app
           rm -rf "$APP_DIR"
-
-          # Clone latest code
           git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
           cd "$APP_DIR"
 
-          # Write .env file
+          # Create .env
           cat > "$APP_DIR/.env" <<ENV_EOF
           GOOGLE_API_KEY='${GOOGLE_API_KEY:-not_set}'
           ENV_EOF
 
-          # Stop container using external port if exists
-          OCCUPYING_CONTAINER=$(sudo docker ps --filter "publish=$EXTERNAL_PORT" -q | head -n1 || true)
-          if [ -n "$OCCUPYING_CONTAINER" ]; then
-            sudo docker stop "$OCCUPYING_CONTAINER" || true
-            sudo docker rm "$OCCUPYING_CONTAINER" || true
-          fi
-
-          # Remove old attendance-app container if exists
+          # Stop old container if exists
           if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app$"; then
             sudo docker rm -f attendance-app || true
           fi
 
-          # Build Docker image
+          # Build and run Docker
           IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
           sudo docker build -t attendance-app:$IMAGE_TAG "$APP_DIR"
+          sudo docker run -d --name attendance-app --env-file "$APP_DIR/.env" -p $EXTERNAL_PORT:$INTERNAL_PORT attendance-app:$IMAGE_TAG
 
-          # Run new container
-          sudo docker run -d --name attendance-app \
-            --env-file "$APP_DIR/.env" \
-            -p $EXTERNAL_PORT:$INTERNAL_PORT attendance-app:$IMAGE_TAG
+          # Start ngrok in background
+          nohup ngrok http $EXTERNAL_PORT > ngrok.log 2>&1 &
 
-          # Cleanup old images
-          sudo docker image prune -f
-
-          # Kill any previous ngrok processes
-          pkill -f ngrok || true
-
-          # Run ngrok in background and log to file
-          nohup ngrok http $EXTERNAL_PORT --log=stdout > ngrok.log 2>&1 &
-
-          # Wait a bit for ngrok to start
+          # Wait a few seconds and print tunnel URL
           sleep 5
-
-          # Print ngrok public URL
-          curl --silent http://127.0.0.1:4040/api/tunnels | grep -o '"public_url":"[^"]*' | cut -d'"' -f4
+          curl --silent http://127.0.0.1:4040/api/tunnels | grep -o 'https://[^"]*' || true
           EOF
