--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -2,8 +2,7 @@ name: Deploy to EC2
 
 on:
   push:
-    branches:
-      - main   # or your deployment branch
+    branches: [ "main" ]
 
 jobs:
   deploy:
@@ -11,54 +10,65 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Deploy to EC2
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+
+      - name: Deploy on EC2
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
-          EC2_USER: ubuntu
-          EC2_KEY: ${{ secrets.EC2_KEY }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         run: |
-          echo "$EC2_KEY" > ec2_key.pem
-          chmod 600 ec2_key.pem
+          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST 'bash -s' <<'EOF'
+          set -eux
 
-          ssh -o StrictHostKeyChecking=no -i ec2_key.pem $EC2_USER@$EC2_HOST 'bash -s' <<'EOF'
-            set -e
+          APP_DIR=/home/ubuntu/app
+          INTERNAL_PORT=7860
+          EXTERNAL_PORT=80
 
-            echo "✅ Updating system..."
+          # Install Docker if missing
+          if ! command -v docker >/dev/null 2>&1; then
             sudo apt-get update -y
+            sudo apt-get install -y docker.io git
+            sudo systemctl enable docker
+            sudo systemctl start docker
+          fi
 
-            echo "✅ Installing Docker (if missing)..."
-            if ! command -v docker &> /dev/null
-            then
-              curl -fsSL https://get.docker.com -o get-docker.sh
-              sh get-docker.sh
-              sudo usermod -aG docker $USER
-            fi
+          # Ensure user ubuntu can run docker without sudo
+          if ! groups ubuntu | grep -q docker; then
+            sudo usermod -aG docker ubuntu
+            newgrp docker
+          fi
 
-            echo "✅ Installing Git..."
-            sudo apt-get install -y git
+          # Remove old app directory
+          rm -rf "$APP_DIR"
 
-            echo "✅ Cloning/updating project..."
-            cd ~
-            if [ -d "Attendance-Assistant-Phidata" ]; then
-              cd Attendance-Assistant-Phidata && git pull
-            else
-              git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git
-              cd Attendance-Assistant-Phidata
-            fi
+          # Clone latest code
+          git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
+          cd "$APP_DIR"
 
-            echo "✅ Building and running Docker container..."
-            docker build -t attendance-assistant .
-            docker stop attendance-container || true
-            docker rm attendance-container || true
-            docker run -d -p 80:7860 --name attendance-container attendance-assistant
+          # Write .env file with available secret(s)
+          cat > "$APP_DIR/.env" <<ENV_EOF
+          GOOGLE_API_KEY=${GOOGLE_API_KEY:-not_set}
+          ENV_EOF
 
-            echo "✅ Starting ngrok tunnel..."
-            pkill ngrok || true
-            nohup ngrok http 80 > ngrok.log 2>&1 &
+          # Stop old container if running
+          if docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app$"; then
+            docker rm -f attendance-app || true
+          fi
 
-            echo "✅ Waiting for ngrok to start..."
-            sleep 5
-            curl --silent http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+          # Build Docker image with timestamp tag
+          IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
+          docker build -t attendance-app:$IMAGE_TAG "$APP_DIR"
+
+          # Run new container (map external port 80 -> internal port 7860)
+          docker run -d --name attendance-app \
+            --env-file "$APP_DIR/.env" \
+            -p $EXTERNAL_PORT:$INTERNAL_PORT attendance-app:$IMAGE_TAG
+
+          # Cleanup old images
+          docker image prune -f
           EOF
