--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -89,8 +89,8 @@ jobs:
 
           sleep 5
           NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url')
-          echo "NGROK_URL=$NGROK_URL" > /home/ubuntu/ngrok_url.txt
-          echo "$NGROK_URL"
+          echo "NGROK_URL=$NGROK_URL" >> /home/ubuntu/ngrok_url.txt
+          echo "\$NGROK_URL"
           EOF
 
       - name: Show Ngrok URL
