--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -31,24 +31,13 @@ jobs:
           INTERNAL_PORT=7860
           EXTERNAL_PORT=7860
 
-          # -----------------------------
-          # Install Docker + jq if missing
-          # -----------------------------
           if ! command -v docker >/dev/null 2>&1; then
             sudo apt-get update -y
             sudo apt-get install -y docker.io git curl unzip jq
             sudo systemctl enable docker
             sudo systemctl start docker
-          else
-            if ! command -v jq >/dev/null 2>&1; then
-              sudo apt-get update -y
-              sudo apt-get install -y jq
-            fi
           fi
 
-          # -----------------------------
-          # Install Ngrok if not present
-          # -----------------------------
           if ! command -v ngrok >/dev/null 2>&1; then
             curl -s https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-linux-amd64.zip -o ngrok.zip
             unzip ngrok.zip
@@ -57,19 +46,14 @@ jobs:
             ngrok config add-authtoken ${NGROK_AUTH_TOKEN}
           fi
 
-          # -----------------------------
-          # Deploy the App
-          # -----------------------------
           rm -rf "$APP_DIR"
           git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
           cd "$APP_DIR"
 
-          # Write .env
           cat > "$APP_DIR/.env" <<ENV_EOF
           GOOGLE_API_KEY='${GOOGLE_API_KEY:-not_set}'
           ENV_EOF
 
-          # Stop old container
           if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app$"; then
             sudo docker rm -f attendance-app || true
           fi
@@ -81,16 +65,13 @@ jobs:
             --env-file "$APP_DIR/.env" \
             -p $EXTERNAL_PORT:$INTERNAL_PORT attendance-app:$IMAGE_TAG
 
-          # -----------------------------
-          # Start Ngrok
-          # -----------------------------
           pkill -f "ngrok http" || true
           nohup ngrok http $EXTERNAL_PORT > ngrok.log 2>&1 &
 
           sleep 5
           NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url')
-          echo "NGROK_URL=$NGROK_URL" >> /home/ubuntu/ngrok_url.txt
-          echo "\$NGROK_URL"
+          echo "$NGROK_URL" > /home/ubuntu/ngrok_url.txt
+          echo "$NGROK_URL"
           EOF
 
       - name: Show Ngrok URL
