--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -18,7 +18,6 @@ jobs:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
       - name: Deploy on EC2
-        id: deploy
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
@@ -31,6 +30,7 @@ jobs:
           INTERNAL_PORT=7860
           EXTERNAL_PORT=7860
 
+          # Install tools if missing
           if ! command -v docker >/dev/null 2>&1; then
             sudo apt-get update -y
             sudo apt-get install -y docker.io git curl unzip jq
@@ -38,42 +38,56 @@ jobs:
             sudo systemctl start docker
           fi
 
+          # Install ngrok if missing
           if ! command -v ngrok >/dev/null 2>&1; then
             curl -s https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-linux-amd64.zip -o ngrok.zip
             unzip ngrok.zip
             sudo mv ngrok /usr/local/bin/
             rm -f ngrok.zip
-            ngrok config add-authtoken ${NGROK_AUTH_TOKEN}
           fi
 
+          ngrok config add-authtoken ${NGROK_AUTH_TOKEN}
+
+          # Remove old app directory
           rm -rf "$APP_DIR"
           git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
-          cd "$APP_DIR"
 
+          # Write .env
           cat > "$APP_DIR/.env" <<ENV_EOF
           GOOGLE_API_KEY='${GOOGLE_API_KEY:-not_set}'
           ENV_EOF
 
+          # Remove old container if exists
           if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app$"; then
             sudo docker rm -f attendance-app || true
           fi
 
+          # Remove old Docker images
+          sudo docker image prune -af || true
+
+          # Build new Docker image
           IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
           sudo docker build -t attendance-app:$IMAGE_TAG "$APP_DIR"
 
+          # Run container
           sudo docker run -d --name attendance-app \
             --env-file "$APP_DIR/.env" \
             -p $EXTERNAL_PORT:$INTERNAL_PORT attendance-app:$IMAGE_TAG
 
+          # Stop any existing ngrok tunnels
           pkill -f "ngrok http" || true
+
+          # Start ngrok in background
           nohup ngrok http $EXTERNAL_PORT > ngrok.log 2>&1 &
 
-          sleep 5
-          NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url')
-          echo "$NGROK_URL" > /home/ubuntu/ngrok_url.txt
-          echo "$NGROK_URL"
+          # Wait for ngrok URL
+          for i in {1..12}; do
+            NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url')
+            if [ -n "$NGROK_URL" ] && [[ "$NGROK_URL" != "null" ]]; then
+              echo "$NGROK_URL" > /home/ubuntu/ngrok_url.txt
+              echo "Ngrok URL: $NGROK_URL"
+              break
+            fi
+            sleep 5
+          done
           EOF
-
-      - name: Show Ngrok URL
-        run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "cat /home/ubuntu/ngrok_url.txt"
