--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -23,14 +23,14 @@ jobs:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
           NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST 'bash -s' <<'EOF'
+          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST 'bash -s' <<EOF
           set -eux
 
           APP_DIR=/home/ubuntu/app
           INTERNAL_PORT=7860
           EXTERNAL_PORT=7860
 
-          # Install tools if missing
+          # Install Docker if missing
           if ! command -v docker >/dev/null 2>&1; then
             sudo apt-get update -y
             sudo apt-get install -y docker.io git curl unzip jq
@@ -46,48 +46,51 @@ jobs:
             rm -f ngrok.zip
           fi
 
-          ngrok config add-authtoken ${NGROK_AUTH_TOKEN}
+          # Configure ngrok
+          ngrok config add-authtoken $NGROK_AUTH_TOKEN || true
 
-          # Remove old app directory
+          # Clean previous app
           rm -rf "$APP_DIR"
           git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
+          cd "$APP_DIR"
 
-          # Write .env
+          # Create .env file
           cat > "$APP_DIR/.env" <<ENV_EOF
           GOOGLE_API_KEY='${GOOGLE_API_KEY:-not_set}'
           ENV_EOF
 
-          # Remove old container if exists
-          if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app$"; then
+          # Remove old Docker container if exists
+          if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app\$"; then
             sudo docker rm -f attendance-app || true
           fi
-
-          # Remove old Docker images
-          sudo docker image prune -af || true
 
           # Build new Docker image
           IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
           sudo docker build -t attendance-app:$IMAGE_TAG "$APP_DIR"
 
-          # Run container
+          # Run Docker container
           sudo docker run -d --name attendance-app \
             --env-file "$APP_DIR/.env" \
             -p $EXTERNAL_PORT:$INTERNAL_PORT attendance-app:$IMAGE_TAG
 
-          # Stop any existing ngrok tunnels
+          # Start ngrok
           pkill -f "ngrok http" || true
+          nohup ngrok http $EXTERNAL_PORT > /home/ubuntu/ngrok.log 2>&1 &
 
-          # Start ngrok in background
-          nohup ngrok http $EXTERNAL_PORT > ngrok.log 2>&1 &
-
-          # Wait for ngrok URL
+          # Wait and save ngrok URL
           for i in {1..12}; do
             NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url')
             if [ -n "$NGROK_URL" ] && [[ "$NGROK_URL" != "null" ]]; then
               echo "$NGROK_URL" > /home/ubuntu/ngrok_url.txt
-              echo "Ngrok URL: $NGROK_URL"
               break
             fi
             sleep 5
           done
+
+          # Print ngrok URL
+          cat /home/ubuntu/ngrok_url.txt
           EOF
+
+      - name: Show Ngrok URL
+        run: |
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "cat /home/ubuntu/ngrok_url.txt"
